--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "plcaement portal using MongoDB, Express and NodeJS",
   "main": "app/app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon -e css,ejs,js,json app.js"
   },
   "author": "Himanshu Singh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "~2.5.5",
     "express": "^4.15.2",
-    "mongoose": "^4.9.5"
+    "mongoose": "^4.9.5",
+    "nodemon": "^1.11.0",
+    "reload": "^1.1.2"
   }
 }
