--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
   "author": "Himanshu Singh",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "ejs": "~2.5.5",
-    "express": "^4.15.2",
-    "mongojs": "^2.4.0",
-    "mongoose": "^4.9.5",
-    "nodemon": "^1.11.0",
-    "reload": "^1.1.2",
     "bcryptjs": "*",
+    "body-parser": "^1.17.1",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "ejs": "~2.5.5",
+    "express": "^4.15.2",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "mongojs": "^2.4.0",
+    "mongoose": "^4.9.5",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "reload": "^1.1.2"
   }
 }
