--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.1",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "cors": "^2.8.3",
     "ejs": "~2.5.5",
     "express": "^4.15.2",
     "express-messages": "*",
